--- a/package.json
+++ b/package.json
@@ -19,13 +19,29 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@mantine/core": "7.13.5",
-    "@mantine/hooks": "7.13.5",
+    "@mantine/carousel": "^7.14.0",
+    "@mantine/charts": "^7.14.0",
+    "@mantine/code-highlight": "^7.14.0",
+    "@mantine/core": "^7.14.0",
+    "@mantine/dates": "^7.14.0",
+    "@mantine/form": "^7.14.0",
+    "@mantine/hooks": "^7.14.0",
+    "@mantine/modals": "^7.14.0",
+    "@mantine/nprogress": "^7.14.0",
+    "@mantine/spotlight": "^7.14.0",
+    "@mantine/tiptap": "^7.14.0",
     "@next/bundle-analyzer": "^14.2.4",
     "@tabler/icons-react": "^3.6.0",
+    "@tiptap/extension-link": "^2.9.1",
+    "@tiptap/pm": "^2.9.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
+    "dayjs": "^1.11.13",
+    "embla-carousel-react": "^7.1.0",
     "next": "15.0.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "recharts": "2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
@@ -55,8 +71,8 @@
     "eslint-plugin-testing-library": "^6.2.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.38",
-    "postcss-preset-mantine": "1.17.0",
+    "postcss": "^8.4.49",
+    "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.3.2",
     "storybook": "^8.1.10",
