--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,37 @@
 {
   "compilerOptions": {
-    "jsx": "preserve",
-    "lib": ["dom", "es2015"],
-    "module": "commonjs",
     "target": "es5",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
-    "incremental": true,
+    "esModuleInterop": true,
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./*"]
-    },
+    "jsx": "preserve",
+    "incremental": true,
     "plugins": [
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
-, "app/api/photos/route.js"  ],
+    ".next/types/**/*.ts",
+    "app/api/photos/route.js",
+    "app/api/projects/route.js",
+    "app/api/git-info/route.js"
+  ],
   "exclude": ["node_modules"]
 }
