--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.2.1",
+    "@next/mdx": "^15.2.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -41,36 +41,34 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@remix-run/react": "^2.16.0",
-    "@sveltejs/kit": "^2.17.3",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@sveltejs/kit": "^2.19.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "autoprefixer": "^10.4.20",
+    "acorn": "^8.14.1",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.2",
-    "eslint-config-next": "^15.2.1",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "input-otp": "1.4.2",
     "lucide-react": "^0.454.0",
-    "next": "^15.2.1",
+    "next": "^15.2.2",
     "next-mdx-remote": "^5.0.0",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "path": "^0.12.7",
-    "react": "^19.0.0",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "sonner": "^1.7.4",
-    "svelte": "^5.21.0",
+    "svelte": "^5.23.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
@@ -79,12 +77,15 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^22.13.9",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@types/node": "^22.13.10",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "eslint": "^8.57.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "vite": "^5.4.14"
   },
   "packageManager": "yarn@4.6.0"
 }
