improved image loading for slow connections

--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "clsx": "^2.1.1",
     "fs": "latest",
     "gray-matter": "latest",
-    "lucide-react": "^0.561.0",
-    "next": "16.0.10",
+    "lucide-react": "^0.562.0",
+    "next": "16.1.1",
     "path": "latest",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "latest"
@@ -31,12 +32,12 @@
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "eslint": "^9.39.2",
-    "eslint-config-next": "16.0.10",
+    "eslint-config-next": "16.1.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   },
-  "packageManager": "pnpm@10.25.0+sha512.5e82639027af37cf832061bcc6d639c219634488e0f2baebe785028a793de7b525ffcd3f7ff574f5e9860654e098fe852ba8ac5dd5cefe1767d23a020a92f501",
+  "packageManager": "pnpm@10.26.1+sha512.664074abc367d2c9324fdc18037097ce0a8f126034160f709928e9e9f95d98714347044e5c3164d65bd5da6c59c6be362b107546292a8eecb7999196e5ce58fa",
   "pnpm": {
     "overrides": {
       "@types/react": "19.2.7",
