--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gray-matter": "latest",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "path": "latest",
     "react": "19.2.3",
     "react-dom": "19.2.3",
