--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.1.0",
   "private": true,
   "scripts": {
-    "prebuild": "node scripts/generate-blur-placeholders.mjs",
+    "prebuild": "node scripts/optimize-images.mjs && node scripts/generate-blur-placeholders.mjs",
     "build": "next build",
     "dev": "next dev --turbopack",
     "lint": "biome lint .",
     "format": "biome format --write .",
     "check": "biome check --write .",
     "start": "next start",
+    "optimize:images": "node scripts/optimize-images.mjs",
     "generate:blur": "node scripts/generate-blur-placeholders.mjs"
   },
   "dependencies": {
